End of section 16

--- a/client/src/layout/nav/nav.html
+++ b/client/src/layout/nav/nav.html
@@ -20,6 +20,8 @@
             <a routerLink="/lists" routerLinkActive="text-accent" [routerLinkActiveOptions]="{exact: true}">Lists</a>
             <a routerLink="/messages" routerLinkActive="text-accent"
                 [routerLinkActiveOptions]="{exact: true}">Messages</a>
+            <a *appHasRole="['Admin', 'Moderator']" routerLink="/admin" routerLinkActive="text-accent"
+                [routerLinkActiveOptions]="{exact: true}">Admin</a>
             }
             <a routerLink="/errors" routerLinkActive="text-accent">Errors</a>
         </nav>
