End of section 18

--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -8,5 +8,4 @@
     <router-outlet />
 </div>
 
-<!-- Old ways to apply conditional styles -->
-<!-- [ngClass]="{'mt-24 container mx-auto': !(router.url === '/')}" -->
+<app-confirm-dialog />
